--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,168 +1,199 @@
+@keyframes spin-border {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 .page {
-  --gray-rgb: 0, 0, 0;
-  --gray-alpha-200: rgba(var(--gray-rgb), 0.08);
-  --gray-alpha-100: rgba(var(--gray-rgb), 0.05);
-
-  --button-primary-hover: #383838;
-  --button-secondary-hover: #f2f2f2;
-
-  display: grid;
-  grid-template-rows: 20px 1fr 20px;
-  align-items: center;
-  justify-items: center;
-  min-height: 100svh;
-  padding: 80px;
-  gap: 64px;
-  font-family: var(--font-geist-sans);
+    background-color: rgb(32, 92, 123);
+    min-height: 100vh;
+    padding: 10px;
+    position: relative;
 }
 
-@media (prefers-color-scheme: dark) {
-  .page {
-    --gray-rgb: 255, 255, 255;
-    --gray-alpha-200: rgba(var(--gray-rgb), 0.145);
-    --gray-alpha-100: rgba(var(--gray-rgb), 0.06);
-
-    --button-primary-hover: #ccc;
-    --button-secondary-hover: #1a1a1a;
-  }
-}
-
-.main {
-  display: flex;
-  flex-direction: column;
-  gap: 32px;
-  grid-row-start: 2;
-}
-
-.main ol {
-  font-family: var(--font-geist-mono);
-  padding-left: 0;
-  margin: 0;
-  font-size: 14px;
-  line-height: 24px;
-  letter-spacing: -0.01em;
-  list-style-position: inside;
-}
-
-.main li:not(:last-of-type) {
-  margin-bottom: 8px;
-}
-
-.main code {
-  font-family: inherit;
-  background: var(--gray-alpha-100);
-  padding: 2px 4px;
-  border-radius: 4px;
-  font-weight: 600;
-}
-
-.ctas {
-  display: flex;
-  gap: 16px;
-}
-
-.ctas a {
-  appearance: none;
-  border-radius: 128px;
-  height: 48px;
-  padding: 0 20px;
-  border: none;
-  border: 1px solid transparent;
-  transition:
-    background 0.2s,
-    color 0.2s,
-    border-color 0.2s;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 16px;
-  line-height: 20px;
-  font-weight: 500;
-}
-
-a.primary {
-  background: var(--foreground);
-  color: var(--background);
-  gap: 8px;
-}
-
-a.secondary {
-  border-color: var(--gray-alpha-200);
-  min-width: 158px;
-}
-
-.footer {
-  grid-row-start: 3;
-  display: flex;
-  gap: 24px;
-}
-
-.footer a {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-}
-
-.footer img {
-  flex-shrink: 0;
-}
-
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  a.primary:hover {
-    background: var(--button-primary-hover);
-    border-color: transparent;
-  }
-
-  a.secondary:hover {
-    background: var(--button-secondary-hover);
-    border-color: transparent;
-  }
-
-  .footer a:hover {
-    text-decoration: underline;
-    text-underline-offset: 4px;
-  }
-}
-
-@media (max-width: 600px) {
-  .page {
-    padding: 32px;
-    padding-bottom: 80px;
-  }
-
-  .main {
-    align-items: center;
-  }
-
-  .main ol {
+.title {
+    color: white;
     text-align: center;
-  }
-
-  .ctas {
-    flex-direction: column;
-  }
-
-  .ctas a {
-    font-size: 14px;
-    height: 40px;
-    padding: 0 16px;
-  }
-
-  a.secondary {
-    min-width: auto;
-  }
-
-  .footer {
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-  }
+    padding: 15px;
+    font-size: clamp(22px, 5vw, 36px);
 }
 
-@media (prefers-color-scheme: dark) {
-  .logo {
-    filter: invert();
-  }
+.model {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+}
+
+.model__label {
+    color: white;
+}
+
+.model__select {
+    margin-left: 6px;
+    border: none;
+    border-radius: 5px;
+    text-align: center;
+    box-shadow: 0.5px 0.5px 3px 0 black;
+    cursor: pointer;
+}
+
+.container-chat {
+    margin-bottom: 45px;
+}
+
+.question {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    position: fixed;
+    bottom: 5px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    max-width: 100%;
+    padding: 0 10px;
+}
+
+.question__textarea {
+    width: 70%;
+    border-radius: 10px;
+    padding: 5px 5px 8px 5px;
+    resize: none;
+    overflow: hidden;
+    background-color: bisque;
+    box-shadow: 2px 2px 5px 0 black;
+}
+
+.question__button {
+    border: 1px solid green;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    box-shadow: 2px 2px 5px 0 rgb(0, 0, 0);
+    cursor: pointer;
+    color: green;
+    background-color: rgb(192, 227, 248);
+    font-size: 14px;
+}
+
+.question__button:hover {
+    box-shadow: 1px 1px 3px 0 rgb(0, 0, 0);
+    border: 1px solid coral;
+    color: coral;
+}
+
+.ai-responses {
+    position: fixed;
+    top: 5px;
+    left: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    background-color: bisque;
+    box-shadow: 2px 2px 5px 0 black;
+    z-index: 1;
+}
+
+.ai-responses  span {
+    z-index: 5;
+}
+
+.ai-responses::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: bisque; 
+    z-index: 2; 
+}
+
+.ai-responses-listening {
+    color: green;
+}
+
+.ai-responses-listening::before {
+    content: "";
+    position: absolute;
+    z-index: 1;
+    width: 108%;
+    height: 108%;
+    border-radius: 50%;
+    background: conic-gradient(
+        rgba(0, 128, 0, 0) 0deg,      
+        rgba(0, 128, 0, 0.5) 90deg,   
+        rgba(0, 128, 0, 0.75) 180deg, 
+        rgba(0, 128, 0, 1) 270deg    
+    );
+    mask-image: radial-gradient(circle, rgba(0, 0, 0, 1) 55%, rgba(0, 0, 0, 0) 100%);
+    -webkit-mask-image: radial-gradient(circle, rgba(0, 0, 0, 1) 55%, rgba(0, 0, 0, 0) 100%);
+    animation: spin-border 1s linear infinite;
+}
+
+.ai-responses-loading {
+    color: red;
+}
+
+.ai-responses-loading::before {
+    content: "";
+    position: absolute;
+    width: 108%;
+    height: 108%;
+    border-radius: 50%;
+    background: conic-gradient(
+        rgba(255, 0, 0, 0) 0deg,       
+        rgba(255, 0, 0, 0.5) 90deg,   
+        rgba(255, 0, 0, 0.75) 180deg,  
+        rgba(255, 0, 0, 1) 270deg     
+    );
+    mask-image: radial-gradient(circle, rgba(0, 0, 0, 1) 55%, rgba(0, 0, 0, 0) 100%);
+    -webkit-mask-image: radial-gradient(circle, rgba(0, 0, 0, 1) 55%, rgba(0, 0, 0, 0) 100%);
+    animation: spin-border 1s linear infinite;
+}
+
+.history {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 10px;
+}
+
+.history__block-question {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.history__question {
+    width: 50%;
+    border-radius: 10px;
+    padding: 5px;
+    background-color: rgb(240, 193, 134);
+    box-shadow: 2px 2px 5px 0 black;
+}
+
+.history__text {
+    padding: 5px 10px;
+}
+
+.history__responses {
+    width: 100%;
+    min-height: auto;
+    border-radius: 10px;
+    padding: 5px;
+    background-color: rgb(210, 243, 169);
+    box-shadow: 2px 2px 5px 0 black;
+}
+
+.history__list {
+    padding: 5px 10px;
+    list-style: none;
 }
