--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -11,11 +11,14 @@
 .page {
     background-image: url('/ai_fone.png');
     background-position: center;
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-size: cover;
     min-height: 100vh;
     padding: 10px;
     position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .title {
@@ -46,18 +49,14 @@
 }
 
 .container-chat {
-    margin-bottom: 45px;
+    margin-bottom: 15px;
 }
 
 .question {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
     gap: 10px;
-    position: fixed;
-    bottom: 5px;
-    left: 50%;
-    transform: translateX(-50%);
     width: 100%;
     max-width: 100%;
     padding: 0 10px;
@@ -70,6 +69,11 @@
     resize: none;
     overflow: hidden;
     background-color: rgb(200, 244, 251);
+    margin-bottom: 4px;
+}
+
+.question__textarea:disabled {
+   user-select: none;
 }
 
 .question__button {
