--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -11,8 +11,9 @@
 .page {
     background-image: url('/ai_fone.png');
     background-position: center;
-    background-repeat: repeat;
+    background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
     min-height: 100vh;
     padding: 10px;
     position: relative;
